force-app/main/default/objects/Purchase_Request__c/Purchase_Request__c.object-meta.xml
<CustomObject>
    <label>Purchase Request</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Purchase Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>