force-app/main/default/objects/Purchase_Request__c/fields/Existing_Software_Limitations__c.field-meta.xml
<CustomField>
    <fullName>Existing_Software_Limitations__c</fullName>
    <inlineHelpText>What is the reason why existing software cannot address the solution?</inlineHelpText>
    <label>Existing Software Limitations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>