force-app/main/default/objects/Purchase_Request__c/fields/Problem_Statement__c.field-meta.xml
<CustomField>
    <fullName>Problem_Statement__c</fullName>
    <inlineHelpText>What is the problem we are looking to solve?</inlineHelpText>
    <label>Problem Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>