force-app/main/default/objects/Purchase_Request__c/fields/Product_Software_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Software_Name__c</fullName>
    <label>Product/Software Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>