force-app/main/default/objects/Purchase_Request__c/fields/Request_Urgency__c.field-meta.xml
<CustomField>
    <fullName>Request_Urgency__c</fullName>
    <label>Request Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>