force-app/main/default/objects/Purchase_Request__c/fields/Rollout_Plan__c.field-meta.xml
<CustomField>
    <fullName>Rollout_Plan__c</fullName>
    <label>Rollout Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>