force-app/main/default/objects/Purchase_Request__c/fields/Scalable__c.field-meta.xml
<CustomField>
    <fullName>Scalable__c</fullName>
    <inlineHelpText>Can the solution scale with growth?</inlineHelpText>
    <label>Scalable?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>