force-app/main/default/objects/Purchase_Request__c/fields/Solution_Approach__c.field-meta.xml
<CustomField>
    <fullName>Solution_Approach__c</fullName>
    <inlineHelpText>How does this solution address the problem?</inlineHelpText>
    <label>Solution Approach</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>