force-app/main/default/objects/Purchase_Request__c/fields/User_Count__c.field-meta.xml
<CustomField>
    <fullName>User_Count__c</fullName>
    <label>User Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>